# someip

someip_workspace/: readme.md  readme2.md  readme3.md
someip_workspace/commonapi_demo/: CMakeLists.txt  commonapi.ini  docker-compose.yml  generate.sh
someip_workspace/commonapi_demo/config/: service.json
someip_workspace/commonapi_demo/config_docker/: client.json  service.json
someip_workspace/commonapi_demo/fidl/: Demo.fdepl  Demo.fidl
someip_workspace/commonapi_demo/src/: Client.cpp  Service.cpp
someip_workspace/commonapi_demo/src-gen/v1/commonapi/demo/: DemoService.hpp  DemoServiceProxy.hpp  DemoServiceProxyBase.hpp  DemoServiceSomeIPDeployment.cpp  DemoServiceSomeIPDeployment.hpp  DemoServiceSomeIPProxy.cpp  DemoServiceSomeIPProxy.hpp  DemoServiceSomeIPStubAdapter.cpp  DemoServiceSomeIPStubAdapter.hpp  DemoServiceStub.hpp  DemoServiceStubDefault.hpp
someip_workspace/generators/commonapi-core-generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
someip_workspace/generators/commonapi-core-generator/configuration/org.eclipse.osgi/: framework.info.29  framework.info.5
someip_workspace/generators/commonapi-core-generator/configuration/org.eclipse.osgi/.manager/: .fileTable.29  .fileTable.30  .fileTable.5  .fileTable.6
someip_workspace/generators/commonapi-someip-generator/configuration/org.eclipse.core.runtime/.manager/: .fileTable.7  .fileTable.8
someip_workspace/generators/commonapi-someip-generator/configuration/org.eclipse.osgi/: framework.info.29  framework.info.5
someip_workspace/someip_demo/: CMakeLists.txt
someip_workspace/someip_demo/config/: client.json  service.json
someip_workspace/someip_demo/src/: client.cpp  payload_helper.hpp  service.cpp
(+4 files in other folders)
